Moved all images to images folder and updated paths

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </section> <!-- HERO: big green card with left image + right text -->
     <section class="hero-cta">
         <div class="hero-cta__inner">
-            <div class="hero-cta__left"> <img src="img1.jpeg" alt="Hero image"> </div>
+            <div class="hero-cta__left"> <img src="images/img1.jpeg" alt="Hero image"> </div>
             <div class="hero-cta__divider" aria-hidden="true"></div>
             <div class="hero-cta__right">
                 <h1>Find things to do<br>for everything you're into</h1>
@@ -53,42 +53,42 @@
         <p>Whatever you're into, we've got it</p>
     </section>
     <section class="Food_Game">
-        <div class="interest"><img src="outdoors.jpeg" alt="Outdoors"></div>
-        <div class="interest"><img src="food.jpeg" alt="Food"></div>
-        <div class="interest"><img src="culture.jpeg" alt="Culture"></div>
-        <div class="interest"><img src="water.jpeg" alt="Water"></div>
+        <div class="interest"><img src="images/outdoors.jpeg" alt="Outdoors"></div>
+        <div class="interest"><img src="images/food.jpeg" alt="Food"></div>
+        <div class="interest"><img src="images/culture.jpeg" alt="Culture"></div>
+        <div class="interest"><img src="images/water.jpeg" alt="Water"></div>
     </section> <!-- Nearby experiences -->
     <section class="Memoriesabove">
         <h3>Explore experiences near Chennai (Madras)</h3>
         <p>Can't-miss picks near you</p>
     </section>
     <section class="Memories">
-        <article class="Madras"> <img src="Mahabalipuram.webp" alt="Mahabalipuram">
+        <article class="Madras"> <img src="images/Mahabalipuram.webp" alt="Mahabalipuram">
             <h4>Mahabalipuram Private tour from Chennai by car with guide and lunch by wonder</h4>
             <p class="rating">4.9 🟢🟢🟢🟢 (107)</p>
             <p class="price">from ₹8,048 per adult</p>
         </article>
-        <article class="Madras"> <img src="chennai.jpeg" alt="Chennai">
+        <article class="Madras"> <img src="images/chennai.jpeg" alt="Chennai">
             <h4>Total Chennai city tour in Private car with guide & luncg by wonder tours</h4>
             <p class="rating">4.9 🟢🟢🟢🟢 (64)</p>
             <p class="price">from ₹4,974 per adult</p>
         </article>
-        <article class="Madras"> <img src="Sowcarpet.jpeg" alt="Sowcarpet">
+        <article class="Madras"> <img src="images/Sowcarpet.jpeg" alt="Sowcarpet">
             <h4>Sowcarpet Street Food Walking tour in Chennai with guide</h4>
             <p class="rating">5.0 🟢🟢🟢🟢 (65)</p>
             <p class="price">from ₹4,069 per adult</p>
         </article>
-        <article class="Madras"> <img src="Wildlifechennai.jpeg" alt="Wildlife Chennai">
+        <article class="Madras"> <img src="images/Wildlifechennai.jpeg" alt="Wildlife Chennai">
             <h4>Wild life tour in Chennai with guide and private car</h4>
             <p class="rating">4.9 🟢🟢🟢🟢 (9)</p>
             <p class="price">from ₹11,304 per adult</p>
         </article>
-        <article class="Madras"> <img src="Georgetown.jpeg" alt="Georgetown">
+        <article class="Madras"> <img src="images/Georgetown.jpeg" alt="Georgetown">
             <h4>Georgetown heritage walking tour in Chennai about the founding of Chennai</h4>
             <p class="rating">4.9 🟢🟢🟢🟢 (127)</p>
             <p class="price">from ₹4,522 per adult</p>
         </article>
-        <article class="Madras"> <img src="Traditionalcooking.jpeg" alt="Traditional cooking">
+        <article class="Madras"> <img src="images/Traditionalcooking.jpeg" alt="Traditional cooking">
             <h4>Traditional cooking class in chennai in a Local Home with Sundari</h4>
             <p class="rating">4.9 🟢🟢🟢🟢 (34)</p>
             <p class="price">from ₹7,054 per adult</p>
@@ -98,22 +98,22 @@
         <h3>Inspiration to get you going</h3>
     </section>
     <section class="Inspiration">
-        <article class="inpirePic"> <img src="pic1.jpg" alt="">
+        <article class="inpirePic"> <img src="images/pic1.jpg" alt="">
             <h5>Your go-to guide for fall travel</h5>
         </article>
-        <article class="inpirePic"> <img src="pic2.jpg" alt="">
+        <article class="inpirePic"> <img src="images/pic2.jpg" alt="">
             <h5>How to see North America's fall foliage by train</h5>
         </article>
-        <article class="inpirePic"> <img src="pic3.jpg" alt="">
+        <article class="inpirePic"> <img src="images/pic3.jpg" alt="">
             <h5>6 must-visit ghost towns in the American West</h5>
         </article>
-        <article class="inpirePic"> <img src="pic4.jpg" alt="">
+        <article class="inpirePic"> <img src="images/pic4.jpg" alt="">
             <h5>Inside the world's spookiest hotels</h5>
         </article>
-        <article class="inpirePic"> <img src="pic5.jpg" alt="">
+        <article class="inpirePic"> <img src="images/pic5.jpg" alt="">
             <h5>7 European cities you can tackle in a long fall weekend</h5>
         </article>
-        <article class="inpirePic"> <img src="pic6.jpg" alt="">
+        <article class="inpirePic"> <img src="images/pic6.jpg" alt="">
             <h5>An abbreviated guide to national-parks stargazing</h5>
         </article>
     </section> <!-- Right now -->
@@ -122,17 +122,17 @@
         <p>Seasonal faves you don't want to miss</p>
     </section>
     <section class="rightnowCatagories"> <!-- Keep your original category list; put first few as example -->
-        <article class="category"> <img src="porto.jpg" alt="Porto">
+        <article class="category"> <img src="images/porto.jpg" alt="Porto">
             <h4>Complete Douro Valley Wine Tour with Lunch, Wine Tastings and River Cruise</h4>
             <p class="rating">4.9 🟢🟢🟢🟢 (10,284)</p>
             <p class="price">from ₹10,413 per adult</p>
         </article>
-        <article class="category"> <img src="rovaniemi.jpg" alt="Rovaniemi">
+        <article class="category"> <img src="images/rovaniemi.jpg" alt="Rovaniemi">
             <h4>Nothern Lights Rovaniemi: Guaranteed Viewing & Unlimited /Mileage</h4>
             <p class="rating">4.9 🟢🟢🟢🟢 (1,552)</p>
             <p class="price">from ₹20,931 per adult</p>
         </article>
-        <article class="category"> <img src="capeTown.jpg" alt="Cape Town">
+        <article class="category"> <img src="images/capeTown.jpg" alt="Cape Town">
             <h4>From Cape Town: Full Day Guided Hermanus and Whale tour</h4>
             <p class="rating">4.9 🟢🟢🟢🟢 (154)</p>
             <p class="price">from ₹5,802 per adult</p>
@@ -142,18 +142,18 @@
         <h3>Iconic places you need to see</h3>
     </section>
     <section class="iconic">
-        <div class="iconicimages"> <img src="Rome.jpg" alt="Rome"></div>
-        <div class="iconicimages"><img src="paris.jpg" alt="Paris"> </div>
-        <div class="iconicimages"> <img src="las.jpg" alt="Las Vegas"> </div>
-        <div class="iconicimages"> <img src="reyk.jpg" alt="Reykjavik"> </div>
-        <div class="iconicimages"> <img src="london.jpg" alt="London"> </div>
-        <div class="iconicimages"> <img src="floren.jpg" alt="Florence"> </div>
-        <div class="iconicimages"> <img src="New_york.jpg" alt="New York"> </div>
-        <div class="iconicimages"> <img src="Barcelona.jpg" alt="Barcelona"> </div>
+        <div class="iconicimages"> <img src="images/Rome.jpg" alt="Rome"></div>
+        <div class="iconicimages"><img src="images/paris.jpg" alt="Paris"> </div>
+        <div class="iconicimages"> <img src="images/las.jpg" alt="Las Vegas"> </div>
+        <div class="iconicimages"> <img src="images/reyk.jpg" alt="Reykjavik"> </div>
+        <div class="iconicimages"> <img src="images/london.jpg" alt="London"> </div>
+        <div class="iconicimages"> <img src="images/floren.jpg" alt="Florence"> </div>
+        <div class="iconicimages"> <img src="images/New_york.jpg" alt="New York"> </div>
+        <div class="iconicimages"> <img src="images/Barcelona.jpg" alt="Barcelona"> </div>
     </section> <!-- Wander two-column -->
     <section class="wanderer-section">
         <div class="wanderer-container">
-            <div class="wanderer-left"> <img src="Wanderlab.jpg" alt="Watch The Wanderer"> </div>
+            <div class="wanderer-left"> <img src="images/Wanderlab.jpg" alt="Watch The Wanderer"> </div>
             <div class="wanderer-right">
                 <p class="sponsored"> <i class="fa-solid fa-eye"></i> Sponsored by <a href="#">Wanderlab</a> </p>
                 <h2>Watch The Wanderer</h2>
@@ -168,31 +168,31 @@
             <p>Among our top 1% of places, stays, eats, and experiences—decided by you.</p> <button>See the
                 winners</button>
         </div>
-        <div class="right"><img src="choice.jpeg" alt="Choice"></div>
+        <div class="right"><img src="images/choice.jpeg" alt="Choice"></div>
     </section> <!-- Collections -->
     <section class="collectionabove">
         <h3>Browse themed collections</h3>
     </section>
     <section class="collection">
-        <article class="theme"> <img src="autumn.jpg" alt="">
+        <article class="theme"> <img src="images/autumn.jpg" alt="">
             <p>See what makes the city so magical at this time of year</p>
         </article>
-        <article class="theme"> <img src="chicago.jpg" alt="">
+        <article class="theme"> <img src="images/chicago.jpg" alt="">
             <p>Eats and activities that won't break the bank</p>
         </article>
-        <article class="theme"> <img src="hearty.jpg" alt="">
+        <article class="theme"> <img src="images/hearty.jpg" alt="">
             <p>Pierogies, kielbasa and so much more</p>
         </article>
-        <article class="theme"> <img src="soak.jpg" alt="">
+        <article class="theme"> <img src="images/soak.jpg" alt="">
             <p>Doable day trips to Napa and Sonoma</p>
         </article>
-        <article class="theme"> <img src="tokyo.jpg" alt="">
+        <article class="theme"> <img src="images/tokyo.jpg" alt="">
             <p>Unique experiences you can't do anywhere else</p>
         </article>
-        <article class="theme"> <img src="londondark.jpg" alt="">
+        <article class="theme"> <img src="images/londondark.jpg" alt="">
             <p>There's lots to do when the sun goes down</p>
         </article>
-        <article class="theme"> <img src="highlands.jpg" alt="">
+        <article class="theme"> <img src="images/highlands.jpg" alt="">
             <p>See rolling hills, castles, and Loch Ness</p>
         </article>
     </section> <!-- Footer -->
